src/test/ui/proc-macro/group-compat-hack/group-compat-hack.stderr
error: using an old version of `time-macros-impl`
  --> $DIR/time-macros-impl/src/lib.rs:5:32
   |
LL |         #[my_macro] struct One($name);
   |                                ^^^^^
   |
  ::: $DIR/group-compat-hack.rs:26:5
   |
LL |     impl_macros!(Foo);
   |     ----------------- in this macro invocation
   |
   = note: `#[deny(proc_macro_back_compat)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `time-macros-impl` crate will stop compiling in futures version of Rust. Please update to the latest version of the `time` crate to avoid breakage
   = note: this error originates in the macro `impl_macros` (in Nightly builds, run with -Z macro-backtrace for more info)

error: using an old version of `time-macros-impl`
  --> $DIR/time-macros-impl-0.1.0/src/lib.rs:5:32
   |
LL |         #[my_macro] struct One($name);
   |                                ^^^^^
   |
  ::: $DIR/group-compat-hack.rs:43:5
   |
LL |     impl_macros!(Foo);
   |     ----------------- in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `time-macros-impl` crate will stop compiling in futures version of Rust. Please update to the latest version of the `time` crate to avoid breakage
   = note: this error originates in the macro `impl_macros` (in Nightly builds, run with -Z macro-backtrace for more info)

error: using an old version of `js-sys`
  --> $DIR/js-sys-0.3.17/src/lib.rs:5:32
   |
LL |         #[my_macro] struct Two($name);
   |                                ^^^^^
   |
  ::: $DIR/group-compat-hack.rs:45:5
   |
LL |     arrays!(Foo);
   |     ------------ in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: older versions of the `js-sys` crate will stop compiling in future versions of Rust; please update to `js-sys` v0.3.40 or above
   = note: this error originates in the macro `arrays` (in Nightly builds, run with -Z macro-backtrace for more info)

error: using an old version of `actix-web`
  --> $DIR/actix-web/src/extract.rs:5:34
   |
LL |         #[my_macro] struct Three($T);
   |                                  ^^
   |
  ::: $DIR/group-compat-hack.rs:54:5
   |
LL |     tuple_from_req!(Foo);
   |     -------------------- in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the version of `actix-web` you are using might stop compiling in future versions of Rust; please update to the latest version of the `actix-web` crate to avoid breakage
   = note: this error originates in the macro `tuple_from_req` (in Nightly builds, run with -Z macro-backtrace for more info)

error: using an old version of `actix-web`
  --> $DIR/actix-web-2.0.0/src/extract.rs:5:34
   |
LL |         #[my_macro] struct Three($T);
   |                                  ^^
   |
  ::: $DIR/group-compat-hack.rs:62:5
   |
LL |     tuple_from_req!(Foo);
   |     -------------------- in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the version of `actix-web` you are using might stop compiling in future versions of Rust; please update to the latest version of the `actix-web` crate to avoid breakage
   = note: this error originates in the macro `tuple_from_req` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

Future incompatibility report: Future breakage diagnostic:
error: using an old version of `time-macros-impl`
  --> $DIR/time-macros-impl/src/lib.rs:5:32
   |
LL |         #[my_macro] struct One($name);
   |                                ^^^^^
   |
  ::: $DIR/group-compat-hack.rs:26:5
   |
LL |     impl_macros!(Foo);
   |     ----------------- in this macro invocation
   |
   = note: `#[deny(proc_macro_back_compat)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `time-macros-impl` crate will stop compiling in futures version of Rust. Please update to the latest version of the `time` crate to avoid breakage
   = note: this error originates in the macro `impl_macros` (in Nightly builds, run with -Z macro-backtrace for more info)

Future breakage diagnostic:
error: using an old version of `time-macros-impl`
  --> $DIR/time-macros-impl-0.1.0/src/lib.rs:5:32
   |
LL |         #[my_macro] struct One($name);
   |                                ^^^^^
   |
  ::: $DIR/group-compat-hack.rs:43:5
   |
LL |     impl_macros!(Foo);
   |     ----------------- in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `time-macros-impl` crate will stop compiling in futures version of Rust. Please update to the latest version of the `time` crate to avoid breakage
   = note: this error originates in the macro `impl_macros` (in Nightly builds, run with -Z macro-backtrace for more info)

Future breakage diagnostic:
error: using an old version of `js-sys`
  --> $DIR/js-sys-0.3.17/src/lib.rs:5:32
   |
LL |         #[my_macro] struct Two($name);
   |                                ^^^^^
   |
  ::: $DIR/group-compat-hack.rs:45:5
   |
LL |     arrays!(Foo);
   |     ------------ in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: older versions of the `js-sys` crate will stop compiling in future versions of Rust; please update to `js-sys` v0.3.40 or above
   = note: this error originates in the macro `arrays` (in Nightly builds, run with -Z macro-backtrace for more info)

Future breakage diagnostic:
error: using an old version of `actix-web`
  --> $DIR/actix-web/src/extract.rs:5:34
   |
LL |         #[my_macro] struct Three($T);
   |                                  ^^
   |
  ::: $DIR/group-compat-hack.rs:54:5
   |
LL |     tuple_from_req!(Foo);
   |     -------------------- in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the version of `actix-web` you are using might stop compiling in future versions of Rust; please update to the latest version of the `actix-web` crate to avoid breakage
   = note: this error originates in the macro `tuple_from_req` (in Nightly builds, run with -Z macro-backtrace for more info)

Future breakage diagnostic:
error: using an old version of `actix-web`
  --> $DIR/actix-web-2.0.0/src/extract.rs:5:34
   |
LL |         #[my_macro] struct Three($T);
   |                                  ^^
   |
  ::: $DIR/group-compat-hack.rs:62:5
   |
LL |     tuple_from_req!(Foo);
   |     -------------------- in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the version of `actix-web` you are using might stop compiling in future versions of Rust; please update to the latest version of the `actix-web` crate to avoid breakage
   = note: this error originates in the macro `tuple_from_req` (in Nightly builds, run with -Z macro-backtrace for more info)

